--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             } else if(valor < 2000){
                 alert("La casilla esta llenada con un año no permitido, por favor, intentar con uno mayor a al año 2000")
             } else if(valor => 2021){
-                alert("Imposible, no puedes haber nacido en >= 2022, Oh si? ;-;");
+                alert("Imposible");
             }
 
             valor = document.getElementById("estatura").value;
