--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <form name= "f1" action="#" method="POST" onsubmit="validacion();">
         <p>Nombre:<input type="text" id="nombre"></p>
-        <p>Año de nacimiento: <input type="number" min="1800" max="2021" id="añodenacimiento"></p>
+        <p>Año de nacimiento: <input type="number" min="1800" max="2021" id="año"></p>
         <p>Estatura: <input type="text" id="estatura"></p>
         <p>Sexo: 
             <input type="radio" name="genero" id="Hombre">Hombre 
@@ -35,7 +35,7 @@
                     alert("La casilla Nombre no debe ser un numero");
                 }
 
-            valor = document.getElementById("añodenacimiento").value;
+            valor = document.getElementById("año").value;
             if (valor == null || valor.length == 0 || valor === ""){
                 alert("La casilla Año de nacimiento esta vacia, rellenala por favor");
             } else if(valor < 1800){
