--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             var s="no";
 	        for(var i=0;i<document.f1.genero.length;i++){
 		        if(document.f1.genero[i].checked){
-			        alert("marco:"+document.f1.genero[i].value);
+			        alert(""+document.f1.genero[i].value);
 			        s="si";
 		        }
 	        }
